syntax = "proto3";

package user;

option go_package = "github.com/ngtrdai197/url-shortener/pkg/grpc/pb";
import "google/protobuf/timestamp.proto";

message User {
  uint32 id = 1;
  string username = 2;
  string full_name = 3;
  google.protobuf.Timestamp created_at = 4;
}